--- a/statistics/5sem/10.tex
+++ b/statistics/5sem/10.tex
@@ -102,7 +102,7 @@
 Пусть мы хотим проверить, является ли \(R^2\) статистически значимым, т.е. проверяем основную гипотезу \(H_0 : R^2_{\mathrm{T}} = 0\) против гипотезы \(H_1 : R_{\mathrm{T}} \neq 0\)\footnote{\(R_{\mathrm{T}}\) --- теоретический коэффициент детерминации.}
 
 \begin{theorem}
-    \[K = \frac{R^2(n - 2)}{1 - n^2} \in F(1, n - 2)\]
+    \[K = \frac{R^2(n - 2)}{1 - R^2} \in F(1, n - 2)\]
     Пусть \(t_{\text{кр.}}\) --- квантиль \(F(1, n - 2)\) уровня значимости \(\alpha\). Тогда если \(K < t_{\text{кр.}}\), то принимается гипотеза \(H_0\), иначе \(H_1\).
 \end{theorem}
 
